testsuite/bsc.typechecker/typeclasses/ATFResultNotDetermined.bs.bsc-out.expected
checking package dependencies
compiling ATFResultNotDetermined.bs
Error: "ATFResultNotDetermined.bs", line 11, column 7: (T0162)
  Type function `BadF': result variable `c' is not determined by parameter `a'
  via any functional dependency
